--- a/index.html
+++ b/index.html
@@ -6,16 +6,16 @@
     </head>
     <body>
         <h1>Dipendenze Tecnologiche</h1>
-        <img src="/images/image.png" alt="Dipendenze">
+        <img src="/images/image1.png" alt="Dipendenze">
         <h2>Quali sono le dipendenze dalla tecnologia?</h2>
         <p>Esistono numerose dipendenze dovute alla teconologia, alcune anche meno conosciute, tra cui:</p>
-        <ul>
-            <li>social media;</li>
-            <li>notifiche;</li>
-            <li>shopping compulsivo agevolato dalla comoditòà di internet;</li>
-            <li>intelligenza artificiale che sostituisce relazioni umane;</li>
-            <li>molto altro.</li>
-        </ul>
+            <ul>
+                <li>social media;</li>
+                <li>notifiche;</li>
+                <li>shopping compulsivo agevolato dalla comoditòà di internet;</li>
+                <li>intelligenza artificiale che sostituisce relazioni umane;</li>
+                <li>molto altro.</li>
+            </ul>
         <h2>Perché è un problema?</h2>
     </body>
 </html>
