Aggiunta dello stile "Liquid Glass" di Apple

--- a/index.html
+++ b/index.html
@@ -5,17 +5,27 @@
         <link rel="stylesheet" href="style.css">
     </head>
     <body>
-        <h1>Dipendenze Tecnologiche</h1>
-        <img src="/images/image1.png" alt="Dipendenze">
-        <h2>Quali sono le dipendenze dalla tecnologia?</h2>
-        <p>Esistono numerose dipendenze dovute alla teconologia, alcune anche meno conosciute, tra cui:</p>
-            <ul>
-                <li>social media;</li>
-                <li>notifiche;</li>
-                <li>shopping compulsivo agevolato dalla comoditòà di internet;</li>
-                <li>intelligenza artificiale che sostituisce relazioni umane;</li>
-                <li>molto altro.</li>
-            </ul>
-        <h2>Perché è un problema?</h2>
+            <div class="titolo-vetro">
+                <h1>Dipendenze Tecnologiche</h1>
+            </div>
+            <div class="space"></div>
+            <div class="card-vetro">
+                <img src="/images/image1.png" alt="Dipendenze">
+            </div>
+            <div class="space"></div>
+            <div class="intestazione-vetro">
+                <h2>Quali sono le dipendenze dalla tecnologia?</h2>
+            </div>
+            <div class="space"></div>
+            <div class="testo-vetro">
+                <p>Esistono numerose dipendenze dovute alla teconologia, alcune anche meno conosciute, tra cui:</p>
+                    <ul>
+                        <li>social media;</li>
+                        <li>notifiche;</li>
+                        <li>shopping compulsivo agevolato dalla comodità di internet;</li>
+                        <li>intelligenza artificiale che sostituisce relazioni umane;</li>
+                        <li>molto altro.</li>
+                    </ul>
+            </div>
     </body>
 </html>
